added parameters linking for rim shader + rim shader

--- a/Tre/Tre.vcxproj.filters
+++ b/Tre/Tre.vcxproj.filters
@@ -29,7 +29,7 @@
       <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="stb_image.c">
-      <Filter>External</Filter>
+      <Filter>CPP</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -67,16 +67,8 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
-      <Filter>External</Filter>
+      <Filter>Headers</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\res\shader.frag">
-      <Filter>External</Filter>
-    </None>
-    <None Include="..\res\shader.vert">
-      <Filter>External</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
@@ -85,13 +77,5 @@
     <Filter Include="CPP">
       <UniqueIdentifier>{4b95db18-ce59-4674-a702-32737a3a0636}</UniqueIdentifier>
     </Filter>
-    <Filter Include="External">
-      <UniqueIdentifier>{d09abc4d-4270-4189-bde3-3d3b1b49de73}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <Object Include="..\res\monkey3.obj">
-      <Filter>External</Filter>
-    </Object>
   </ItemGroup>
 </Project>
