--- a/Tre/Tre.vcxproj.filters
+++ b/Tre/Tre.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClCompile Include="stb_image.c">
       <Filter>CPP</Filter>
     </ClCompile>
+    <ClCompile Include="GameController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -69,6 +70,7 @@
     <ClInclude Include="stb_image.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="GameController.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
