--- a/Tre/Tre.vcxproj
+++ b/Tre/Tre.vcxproj
@@ -102,6 +102,11 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="transform.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
